feat: send activation email after profile registration

--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.show-sql=true
 
 #format sql queries
 spring.jpa.properties.hibernate.format_sql=true
+
+#Email Configuration
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=98388a001@smtp-brevo.com
+spring.mail.password=NPHbT60q54EIORWw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
