--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #Email Configuration
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-spring.mail.username=98388a001@smtp-brevo.com
-spring.mail.password=NPHbT60q54EIORWw
+spring.mail.username=${SPRING_MAIL_USERNAME_BREVO}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
