--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
