feat: add daily email notifications for income/expense reminders and summaries

--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.mail.protocol=smtp
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
+
+equitrack.frontend.url=http://localhost:5173
