setup: configured all required postgres properties

--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -26,4 +26,7 @@ spring.mail.protocol=smtp
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
-equitrack.frontend.url=http://localhost:5173
+equitrack.frontend.url=${EQUITRACK_FRONTEND_URL}
+
+app.activation.url=${EQUITRACK_BACKEND_URL}
+spring.profiles.active=prod
