feat: switch to Brevo API for email delivery to fix SMTP timeout

--- a/equitrack-backend/src/main/resources/application.properties
+++ b/equitrack-backend/src/main/resources/application.properties
@@ -32,3 +32,5 @@ equitrack.frontend.url=${EQUITRACK_FRONTEND_URL}
 
 app.activation.url=${EQUITRACK_BACKEND_URL}
 spring.profiles.active=prod
+
+brevo.api.key=${BREVO_API_KEY}
